# QuestBoard

./: .dockerignore  .env.example  .flaskenv  .gitignore  =3.0.0  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  LICENSE  README.md  README_NEW.md  WEB_README.md  __init__.py  add_license_headers.py  app.py  config.py  craigslist_debug.html  craigslist_rendered.html  database.py  docker-compose.yml  env_wizard.py  errors.py  gear_keywords.json  gear_keywords.py  gear_keywords.yaml  main.py  manage.py  nlp_utils.py  pytest.ini  reddit_source.py  requirements-dev.txt  requirements.txt  run.py  run_migrations.py  run_tests.py  setup.cfg  setup.py  test_config.py  test_db_init.py  (+4 more)
migrations/: 001_add_approval_region_columns.py  __init__.py
migrations/versions/: 9a6b21127685_initial_migration.py
monitoring/: prometheus.yml
monitoring/grafana/: questboard-dashboard.json
questboard/: __init__.py  api_docs.py  api_spec.py  config.py  database.py  monitoring.py
questboard/forms/: __init__.py
questboard/models/: __init__.py  associations.py  base.py  quest.py  sqlalchemy_models.py  tag.py  user.py
requirements/: base.txt  dev.txt
routes/: __init__.py  admin.py  main.py  user.py
services/: __init__.py  difficulty_engine.py  gear_suggester.py  quest_fetcher.py
templates/: base.html
tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_bookmark_race.py  test_bookmarks.py  test_config.py  test_database.py  test_models.py  test_nlp_service.py  test_scoring_service.py  test_services.py  test_sqlalchemy_models.py  test_views.py
(+35 files in other folders)
